--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ ul {
     align-items: center;
     gap: 2rem;
 
-    background-image: url('/images/hero_bg.png');
+    background-image: url('images/hero_bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
